--- a/05passwordGenerator/index.html
+++ b/05passwordGenerator/index.html
@@ -7,7 +7,7 @@
     <title>05passwordgenerator</title>
   </head>
   <body style="background-color: black;">
-    <div id="root"></div>
+    <div1 id="root"></div1>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
